knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Related List custom object that will allow the SG Users to upload an Excel Account Plan file, capture the date/time of the upload, who uploaded the file, and if this uploaded version is the newest and also ability to flag it (ie: checkbox) if this is the final uploaded file.</description>
    <label>Account Plan</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Account Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>