knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Plan__c/fields/Account_Plans_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Plans_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plans Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>