knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account_Plan__c/fields/Final_Version__c.field-meta.xml
<CustomField>
    <fullName>Final_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox if this is the final uploaded file.</description>
    <inlineHelpText>Check if this is the final uploaded file</inlineHelpText>
    <label>Final Version</label>
    <type>Checkbox</type>
</CustomField>